# quickdemo

./: CMakeLists.txt  Main.qml  images.qrc  main.cpp
